Oct.22, midnight, prepare for langgraph update.

--- a/开发日志.md
+++ b/开发日志.md
@@ -6,6 +6,8 @@
 
 增加了两栏切换三栏的前端展示，还没有添加后端功能。
 
+另外系统也没有设计并发处理，主要是AI的API请求这里需要设计一个异步传输（或者视情况而定，目前还处于mvp开发所以暂时不考虑这个事情）。
+
 ## 10月21日
 
 第一波开发，budget planner功能一直无法正确实现。
