--- a/开发日志.md
+++ b/开发日志.md
@@ -1,5 +1,16 @@
 # 开发日志
 
+## 10月23日
+
+设计了前端轮询制+按钮响应，新增两个接口：
+
+* /api/ui/command 通过命令来发送布局变更指令
+* /api/ui/state 获取布局情况
+
+这两个接口的设置主要是为agent操作页面布局打一个基础。
+
+增加了budget planner菜单，因为太晚了还没测试功能和接口状况，等等，明天起来看吧，太困了先睡了。
+
 ## 10月22日
 
 删除全部除前端外的内容，重新开发。回滚到没有任何工具的版本。
